--- a/postagens/templates/base.html
+++ b/postagens/templates/base.html
@@ -36,7 +36,7 @@
 
                     {% csrf_token %}
 
-                    <input class="form-control-me-2" type="search"  placeholder="Pesquisar ingredientes" name="Pesquisado">
+                    <input class="form-control me-2" type="search" placeholder="Pesquisar ingredientes" aria-label="Pesquisar" name='pesquisado'>
                     <button class="btn btn-outline-success" type="submit">Pesquisar</button>
                 </form>
         </ul>
