--- a/postagens/static/postagens/css/criarpost.css
+++ b/postagens/static/postagens/css/criarpost.css
@@ -8,6 +8,7 @@
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
+    color: purple;
 }
 
 .entrada, .area {
@@ -24,11 +25,19 @@
 }
 
 .botao {
-    width: 200px;
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: green;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s;
+    
 }
 
 .botao:hover {
-    background: #497eb6;
+    background: green;
 }
 
 .erro {
@@ -76,4 +85,19 @@ select[multiple] {
 .alergia-item:hover {
     background-color: #e9e9e9;
     border-radius: 3px;
+}
+
+.custom-file-btn {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #800080;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s;
+}
+
+.custom-file-btn:hover {
+  background-color: #800080;
 }
