--- a/postagens/templates/criar_post.html
+++ b/postagens/templates/criar_post.html
@@ -5,7 +5,6 @@
 <link rel="stylesheet" href="{% static 'postagens/css/criarpost.css' %}">
 {% endblock %}
 
-{% block criar %} Criar postagem {% endblock %}
 
 {% block conteudo %}
     
@@ -32,7 +31,8 @@
         </div>
 
         <label for="imagem" class="rotulo">Imagem:</label>
-        <input type="file" name="Imagem do post" id="imagem" class="entrada" required>
+        <input type="file" name="Imagem do post" id="file-input" class="entrada" required style="display: none">
+        <label for="file-input" class="custom-file-btn">Escolher arquivo</label>
 
         <button type="submit" class="botao">Criar Postagem</button>
         
@@ -40,4 +40,4 @@
             <p class="erro">{{ erro }}</p>
         {% endif %}
     </form>
-{% endblock %}
+{% endblock %}  
